--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -784,13 +784,13 @@ body {
   }
 
   .svc-container {
-    padding: 24px 60px;
+    padding: 24px 40px;
     padding-top: 200px;
     max-width: 1000px;
   }
 
   .svc-header {
-    padding: 24px 60px;
+    padding: 24px 40px;
     max-width: 1000px;
   }
 
